# fw

./: .gitignore  CMakeLists.txt
include/: fw.hpp
src/: logger.cpp  logger.hpp  pch.hpp  proxy.cpp  proxy.hpp  settings.cpp  settings.hpp  util.cpp  util.hpp
src/memory/: handle.cpp  handle.hpp  hook.cpp  hook.hpp  memory.cpp  memory.hpp  module.cpp  module.hpp  patch.cpp  patch.hpp  pattern.cpp  pattern.hpp  pointer_validator.cpp  pointer_validator.hpp  protection.cpp  protection.hpp  range.cpp  range.hpp  scanner.cpp  scanner.hpp
src/memory/hooks/: d3d11.cpp  d3d11.hpp  wndproc.cpp  wndproc.hpp
